Fixed schedule items shorter than one hour Fixed schedule items being shorter than one hour being too small to be useable by adding a min-height: 25px to .sch-evnt so that events shorter than one hour still appear to be one hour long

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -119,6 +119,7 @@
 	position: relative;
 	width: 190px;
 	height: 88px; /* This should be 90px - borders top and bottom */
+	min-height: 25px;
 	background: #BDBDBD;
 	left: 0;
 	right: 0;
